--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "laravel/sanctum": "^2.8",
         "laravel/tinker": "^2.7",
         "protonemedia/inertiajs-tables-laravel-query-builder": "^1.4",
+        "spatie/laravel-permission": "^5.5",
         "spatie/laravel-query-builder": "^5.0",
         "tightenco/ziggy": "^1.0"
     },
